--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "authentificator",
   "version": "0.1.0",
   "private": true,
+  "author": "jeremy Nohile",
+  "siteweb": " jeremynohile.890m.com",
   "devDependencies": {
     "react-native-scripts": "1.13.1",
     "jest-expo": "26.0.0",
@@ -21,6 +23,7 @@
   "dependencies": {
     "expo": "^26.0.0",
     "react": "16.3.0-alpha.1",
-    "react-native": "0.54.0"
+    "react-native": "0.54.0",
+    "react-navigation": "^1.5.11"
   }
 }
