--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo": "^26.0.0",
     "react": "16.3.0-alpha.1",
     "react-native": "0.54.0",
+    "react-native-barcodescanner": "^3.1.1",
     "react-navigation": "^1.5.11"
   }
 }
