--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "expo": "^26.0.0",
+    "lodash": "^4.17.5",
     "react": "16.3.0-alpha.1",
     "react-native": "0.54.0",
     "react-native-barcodescanner": "^3.1.1",
