--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "react": "16.3.0-alpha.1",
     "react-native": "0.54.0",
     "react-native-barcodescanner": "^3.1.1",
-    "react-navigation": "^1.5.11"
+    "react-navigation": "^1.5.11",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0"
   }
 }
